写好了RR，即将合并文件

--- a/metadata/config.json
+++ b/metadata/config.json
@@ -6,14 +6,14 @@
 		"cadvisorport":8080
 		},
 	{
-		"host":"",
-		"dockerport":0,
-		"cadvisorport":1
+		"host":"192.168.0.30",
+		"dockerport":4243,
+		"cadvisorport":8080
 		},
 	{
 		"host":"",
-		"dockerport":0,
-		"cadvisorport":2
+		"dockerport":4243,
+		"cadvisorport":8080
 		}	
 	]
 }
